fix handler and generate swagger
